@startuml
together {
    interface NodeInterface {
        const DISPOSITION_FORMDATA = "form-data";
        const DISPOSITION_ATTACHMENT = "attachment";
        const HEADER_DISPOSITION = "content-disposition";
        const HEADER_CONTENT_TYPE = "content-type";
        const ATTRIB_NAME = "name";
        const ATTRIB_FILENAME = "filename";

        +__toString()
        +add(NodeInterface $node)
        +getName()
        +setContentDisposition(string $disposition)
        +getNested()
    }

    interface StreamInterface {
        ==PSR-7==
    }
}

class Envelope {
    const TYPE_FORM_DATA = 'multipart/form-data';
    const TYPE_MIXED = 'multipart/mixed';
    const ATTRIB_BOUNDARY = "boundary";

    __construct(string $name, string $type='', $items = [])
    +__toString()
    +add(NodeInterface $node)
    +getName()
    +setContentDisposition(string $disposition)
    +getNested()

    -exists($name)
    -getPrefix()
    -getItems()
    -getItemsAsString()
    -getItemString($item)
    -fixNodeContentDisposition(NodeInterface $node, string $name)
}
NodeInterface <|-- Envelope

together {
    abstract class AbstractNode {
        #$name;
        #$contentDisposition = '';
        +__toString()
        +add(NodeInterface $node)
        +getName()
        +setContentDisposition(string $disposition)
        +getNested()
        -getContentDisposition()
    }
    NodeInterface <|-- AbstractNode
    AbstractNode ..o Envelope

    class Attachment {
        -$filename = '';
        -$stream;
        -$mime = '';
        -$disposition;

        const DEFAULT_MIME = "application/octet-stream";
        const BINARY_ENCODING = "content-transfer-encoding: binary\\n";

        __construct(string $filename, string $name, StreamInterface $data, string $mime='', string $disposition='')
        +__toString()
        +getNested()
        -headerName()
        -getMime()
        -isBinaryByMime(string $mimeType)
        -contentEncoding()
        -getContents()
        -ifBlank($value, $default)
    }
    AbstractNode <|-- Attachment
    Attachment --o StreamInterface

    class FormInput {
        -$value
        __construct($name, $value)
        +__toString()
        +getNested()
    }
    AbstractNode <|-- FormInput
}

class FormBody {
    -$state;

    __construct(Envelope $initialState)
    +addAttachment(string $name, StreamInterface $value, string $mimeType, string $fileName)
    +addFormInput(string $name, string $value)
    +__toString()
}
FormBody ..* FormInput : internal
FormBody ..* Attachment : internal
FormBody --o Envelope
FormBody --o StreamInterface
@enduml
